fixed overflow-x error.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2127,37 +2127,37 @@ progress {
 }
 
 .table-responsive {
-  overflow-x: 0;
+  overflow-x: visible;
   -webkit-overflow-scrolling: touch;
 }
 
 @media (max-width: 575.98px) {
   .table-responsive-sm {
-    overflow-x: 0;
+    overflow-x: visible;
     -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 767.98px) {
   .table-responsive-md {
-    overflow-x: 0;
+    overflow-x: visible;
     -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 991.98px) {
   .table-responsive-lg {
-    overflow-x: 0;
+    overflow-x: visible;
     -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 1199.98px) {
   .table-responsive-xl {
-    overflow-x: 0;
+    overflow-x: visible;
     -webkit-overflow-scrolling: touch;
   }
 }
 @media (max-width: 1399.98px) {
   .table-responsive-xxl {
-    overflow-x: 0;
+    overflow-x: visible;
     -webkit-overflow-scrolling: touch;
   }
 }
@@ -5489,7 +5489,7 @@ textarea.form-control-lg {
   display: none;
   width: 100%;
   height: 100%;
-  overflow-x: 0;
+  overflow-x: visible;
   overflow-y: auto;
   outline: 0;
 }
